added nav bar and psedo code for landing and results page

--- a/Results_Page.html
+++ b/Results_Page.html
@@ -16,31 +16,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <!-- Bolds the text of the current page -->
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Home</a>
             <a class="nav-item nav-link" href="#">About Us</a>
-            <a class="nav-item nav-link" href="#">Recipes</a>
+            <!-- Bolds the text of the current page -->
+            <a class="nav-item nav-link active" href="#">Recipes<span class="sr-only">(current)</span></a>
           </div>
         </div>
       </nav>
 
     <!-- Conatiner for main features -->
-        <!-- Row 1 -->
         <!-- Column 1 -->
-            <!-- Create card/container for 'Search' -->
-                <!-- Create input for search -->
-                <!-- Create search button -->
-                <!-- Create dropdown with allergen parameters, from API? -->
+            <!-- Create card for 'Filters' -->
+                <!-- Create input box with button -->
                 <!-- Create check boxes with other parameters -->
+            <!-- Create card for "Conversions" -->
+                <!-- Will this use an input? -->
         <!-- Column 2 -->
-            <!-- Create Textbox for 'About Us' -->
-        <!-- Row 2 -->
-        <!-- Column 1 -->
-        <!-- Create card/container for 'Popular Recipes' -->
-            <!-- Will this use another API to pull popular recipes from the web? -->
-        <!-- Column 2 -->
-        <!-- Create 2 side by side containers for GIPHY random food photos -->
+            <!-- Sub-column 1 -->
+            <!-- Create container for 'Search Results' -->
+                <!-- Create card for the main results that will open to an external webpage -->
+            <!-- Sub-column 2 -->
+                <!-- Create card for the video results  -->
     <!-- Create 'Info Footer' -->
-
+    
 </body>
 </html>
