--- a/about_us.html
+++ b/about_us.html
@@ -45,8 +45,7 @@
 
   <!--container that holds a card for each of us-->
 
-  <div class="container" id= "ourinfo">
-    
+  <div class="container" id= "ourinfo">    
     <!--card for terrapin (photo, brief about info (hobbies, history w cooking), link to favorite recipe -->
 
     <div class="card" id="Terrapin" style="width: 18rem;">
@@ -67,8 +66,9 @@
     </div>
 
     <!--card for tammy (photo, brief about info (hobbies, history w cooking), link to favorite recipe -->
+
     <div class="card" id="Tammy" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="..." class="card-img-top" alt="Tammy">
         <div class="card-body">
           <h5 class="card-title">Tammy Nguyen</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
