--- a/index.html
+++ b/index.html
@@ -129,16 +129,12 @@
         <!--2 side by side containers for GIPHY random food photos -->        
         <!--gif 1-->
         <div class="card">
-          <div class="card-body giphy-image1">
-            GIPHY IMAGE HERE
-          </div>
+          <div class="card-body giphy-image1"></div>
         </div>
 
         <!--gif 2-->
         <div class="card">
-          <div class="card-body giphy-image2">
-            GIPHY IMAGE HERE
-          </div>
+          <div class="card-body giphy-image"></div>
         </div>        
       </div>
       <!--end column 2 (giphy)-->
@@ -157,6 +153,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 
 </body>
