added href links to all html nav bars

--- a/Results_Page.html
+++ b/Results_Page.html
@@ -25,7 +25,7 @@
 <body>
   <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Home Cooked Comfort</a>
+        <a class="navbar-brand" href="/index.html">Home Cooked Comfort</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,10 +33,10 @@
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Home</a>
-            <a class="nav-item nav-link" href="#">About Us</a>
+            <a class="nav-item nav-link" href="/index.html">Home</a>
+            <a class="nav-item nav-link" href="/about_us.html">About Us</a>
             <!-- Bolds the text of the current page -->
-            <a class="nav-item nav-link active" href="#">Recipes<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="/Results_Page.html">Recipes<span class="sr-only">(current)</span></a>
           </div>
         </div>
     </nav>
