--- a/about_us.html
+++ b/about_us.html
@@ -26,7 +26,7 @@
     <!-- Nav Bar -->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">    
-    <a class="navbar-brand" href="#">Home Cooked Comfort</a>
+    <a class="navbar-brand" href="/index.html">Home Cooked Comfort</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,10 +34,10 @@
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-      <!-- Bolds the text of the current page -->
-        <a class="nav-item nav-link" href="#">Home</a>
-        <a class="nav-item nav-link active" href="#">About Us <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Recipes</a>      
+        <a class="nav-item nav-link" href="/index.html">Home</a>
+        <!-- Bolds the text of the current page -->
+        <a class="nav-item nav-link active" href="/about_us.html">About Us <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/Results_Page.html">Recipes</a>      
       </div>
     </div>
 
