--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <body>
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg">   
-    <a class="navbar-brand" href="#"> <i class="fas fa-egg"></i>  Home Cooked Comfort  <i class="fas fa-cheese"></i> </a>     
+    <a class="navbar-brand" href="/index.html"> <i class="fas fa-egg"></i>  Home Cooked Comfort  <i class="fas fa-cheese"></i> </a>     
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
       <!-- Bolds the text of the current page -->
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">About Us</a>
-        <a class="nav-item nav-link" href="#">Recipes</a>
+        <a class="nav-item nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/about_us.html">About Us</a>
+        <a class="nav-item nav-link" href="/Results_Page.html">Recipes</a>
 
       </div>
     </div>
