fixin lil things, getting gifs working, nav bar links active!

--- a/about_us.html
+++ b/about_us.html
@@ -32,9 +32,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
         <!-- Bolds the text of the current page -->
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">About Us</a>
-          <a class="nav-item nav-link" href="#">Recipes</a>
+        <a class="nav-item nav-link" href="/index.html">Home</a>
+        <a class="nav-item nav-link active" href="/about_us.html">About Us <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/Results_Page.html">Recipes</a>
   
         </div>
 
@@ -107,10 +107,9 @@
     
 
   <!--container that holds a card for each of us-->
-
+  
 
   <div class="col-md-9" id= "ourinfo">
-    
 
     <!--card for terrapin (photo, brief about info (hobbies, history w cooking), link to favorite recipe -->
 
