--- a/index.html
+++ b/index.html
@@ -143,20 +143,19 @@
         <!--2 side by side containers for GIPHY random food photos -->        
         <!--gif 1-->
         <div class="card">
-          <div class="card-body giphy-image1"></div>
+          <div class="card-body giphy-image"></div>
         </div>
-      </div>
+      
 
         <!--gif 2-->
         <div class="card">
           <div class="card-body giphy-image"></div>
+        </div> 
 
-        </div>        
       </div>
       <!--end column 2 (giphy)-->
     </div>
     <!--end row 2-->
-
   </div>
 
 
