--- a/about_us.html
+++ b/about_us.html
@@ -27,14 +27,14 @@
     <!-- Nav Bar -->
 
     <nav class="navbar navbar-expand-lg">   
-      <a class="navbar-brand" href="#"> <i class="fas fa-egg"></i> Home Cooked Comfort <i class="fas fa-cheese"></i> </a>     
+      <a class="navbar-brand" href="./index.html"> <i class="fas fa-egg"></i> Home Cooked Comfort <i class="fas fa-cheese"></i> </a>     
   
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
         <!-- Bolds the text of the current page -->
-        <a class="nav-item nav-link" href="/index.html">Home</a>
-        <a class="nav-item nav-link active" href="/about_us.html">About Us <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/Results_Page.html">Recipes</a>
+        <a class="nav-item nav-link" href="./index.html">Home</a>
+        <a class="nav-item nav-link active" href="./about_us.html">About Us <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="./Results_Page.html">Recipes</a>
   
         </div>
 
