--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg">          
 
-    <a class="navbar-brand" href="/index.html"> <i class="fas fa-egg"></i>  Home Cooked Comfort  <i class="fas fa-cheese"></i> </a>     
+    <a class="navbar-brand" href="./index.html"> <i class="fas fa-egg"></i>  Home Cooked Comfort  <i class="fas fa-cheese"></i> </a>     
 
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
       <!-- Bolds the text of the current page -->
-        <a class="nav-item nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/about_us.html">About Us</a>
-        <a class="nav-item nav-link" href="/Results_Page.html">Recipes</a>
+        <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="./about_us.html">About Us</a>
+        <a class="nav-item nav-link" href="./Results_Page.html">Recipes</a>
 
       </div>
     </div>
@@ -142,13 +142,14 @@
       <div class="col-md-9">
         <!--2 side by side containers for GIPHY random food photos -->        
         <!--gif 1-->
-        <div class="card">
+
+        <div class="card" id="gifs">
           <div class="card-body giphy-image"></div>
         </div>
       
 
         <!--gif 2-->
-        <div class="card">
+        <div class="card" id="gifs">
           <div class="card-body giphy-image"></div>
         </div> 
 
