--- a/index.html
+++ b/index.html
@@ -124,15 +124,10 @@
       <!--popular recipes-->
 
       <div class="col-md-3">
-        <h4>Popular Recipes Right Now!</h4>
+        <h4>Try Out These Cool Recipes!</h4>
         <!-- Create card/container for 'Popular Recipes' -->
         <div class="card" id="popular"> 
-          <ul class="pop">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-          </ul>       
+          <ul class="pop"></ul>       
       
           <!-- Will this use another API to pull popular recipes from the web? -->
         </div>         
