updated page titles

--- a/Results_Page.html
+++ b/Results_Page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Cooked Comfort</title>
+    <title>Home Cooked Comfort | Recipes</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -43,6 +43,8 @@
     </div>
   </nav>
   <!--end nav bar-->
+
+  <p class="title">Recipes</p>
 
     <!-- Conatiner for main features -->
       <div class="container" id="main">
