--- a/about_us.html
+++ b/about_us.html
@@ -149,7 +149,7 @@
 
   <!--footer-->
 
-  <footer class="footer">
+  <footer class="footer fixed-bottom">
     <i class="fas fa-utensils" style="color:#c6c6c9"></i>    made with love (and hungry bellies)    <i class="fas fa-carrot" style="color: #f48f57"></i> 
   </footer>
 
