--- a/Results_Page.html
+++ b/Results_Page.html
@@ -180,7 +180,7 @@
       
     <!--footer-->
 
-  <footer class="footer">
+  <footer class="footer fixed-bottom">
     <i class="fas fa-utensils"></i>  made with love (and hungry bellies)  <i class="far fa-heart"></i> 
   </footer>
       
