--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   
 
     <!-- Create 'Info Footer' -->
-    <footer class="footer">
+    <footer class="footer fixed-bottom">
       <i class="fas fa-utensils" style="color:#c6c6c9"></i>   made with love (and hungry bellies)   <i class="fas fa-carrot" style="color: #f48f57"></i> 
     </footer>
     <!--footer end-->
