--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Home Cooked Comfort</title>    
+    <title>Home Cooked Comfort | Home</title>    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--fontawesome icons-->
@@ -44,8 +44,7 @@
     <div class="col-md-3" id="row1">
 
       <div class="card" id="random">
-        <h4>Try Out These Cool Recipes!</h4>
-        <br>
+        <h4>Try Out These Cool Recipes!</h4>        
         <ul class="pop"></ul>            
       </div>
 
