link text resize, color and opacity consistancy adjustments

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="col-md-3" id="row1">
 
       <div class="card" id="random">
-        <h4>Try Out These Cool Recipes!</h4>        
+        <h4 style="text-align:center;">Try Out These Cool Recipes!</h4>        
         <ul class="pop"></ul>            
       </div>
 
@@ -114,11 +114,6 @@
       </div>
 
       <!--gif 4-->
-      <div class="card" id="gifs">
-        <div class="card-body giphy-image"></div>
-      </div> 
-        
-      <!--gif 5-->
       <div class="card" id="gifs">
         <div class="card-body giphy-image"></div>
       </div> 
