--- a/Results_Page.html
+++ b/Results_Page.html
@@ -29,7 +29,7 @@
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg">          
 
-    <a class="navbar-brand" href="./index.html"> <i class="fas fa-egg"></i>  Home Cooked Comfort  <i class="fas fa-cheese"></i> </a>     
+    <a class="navbar-brand" href="./index.html"> <i class="fas fa-egg" style="color: white;"></i>  Home Cooked Comfort  <i class="fas fa-cheese" style="color: #fad37c;"></i> </a>     
 
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -180,9 +180,9 @@
       
     <!--footer-->
 
-  <footer class="footer fixed-bottom">
-    <i class="fas fa-utensils"></i>  made with love (and hungry bellies)  <i class="far fa-heart"></i> 
-  </footer>
+    <footer class="footer fixed-bottom">
+      <i class="fas fa-utensils" style="color:#c6c6c9"></i>   made with love (and hungry bellies)   <i class="fas fa-carrot" style="color: #f48f57"></i> 
+    </footer>
       
    
 
