--- a/Results_Page.html
+++ b/Results_Page.html
@@ -59,62 +59,62 @@
                     <div class="input-group mb-3">
                       <div class="input-group-prepend search-input">
                       </div>
-                      <input type="text" class="form-control" placeholder="">
+                      <input type="text" class="form-control" id="user-input" placeholder="">
                     </div>
                 
                 <!-- Create check boxes with other parameters -->
                 <!-- Checkbox 1 -->
                 <div class="form-check text-left">
-                  <input class="form-check-input move-left" type="checkbox" value="" id="checkbox">
+                  <input class="form-check-input move-left" type="checkbox" value="" id="vegetarian">
                   <label class="form-check-label" for="defaultCheck1">
                     <p>Vegetarian</p>
                   </label>
                 </div>
                <!-- Checkbox 2 -->
                 <div class="form-check text-left">
-                  <input class="form-check-input move-left" type="checkbox" value="" id="checkbox">
+                  <input class="form-check-input move-left" type="checkbox" value="" id="vegan">
                   <label class="form-check-label" for="defaultCheck1">
                     <p>Vegan</p>
                   </label>
                 </div>
                  <!-- Checkbox 3 -->
                 <div class="form-check text-left">
-                  <input class="form-check-input move-left" type="checkbox" value="" id="checkbox">
+                  <input class="form-check-input move-left" type="checkbox" value="" id="dairy-free">
                   <label class="form-check-label" for="defaultCheck1">
                     <p>Dairy-Free</p>
                   </label>
                 </div>
                <!-- Checkbox 4 -->
                 <div class="form-check text-left">
-                  <input class="form-check-input move-left" type="checkbox" value="" id="checkbox">
+                  <input class="form-check-input move-left" type="checkbox" value="" id="gluten-free">
                   <label class="form-check-label" for="defaultCheck1">
                     <p>Gluten-Free</p>
                   </label>
                 </div>
               <!-- Checkbox 5 -->
               <div class="form-check text-left">
-                <input class="form-check-input move-left" type="checkbox" value="" id="checkbox">
+                <input class="form-check-input move-left" type="checkbox" value="" id="peanut-free">
                 <label class="form-check-label" for="defaultCheck1">
                   <p>Peanut-Free</p>
                 </label>
               </div>
               <!-- Checkbox 6 -->
               <div class="form-check text-left">
-                <input class="form-check-input move-left" type="checkbox" value="" id="checkbox">
+                <input class="form-check-input move-left" type="checkbox" value="" id="tree-nut-free">
                 <label class="form-check-label" for="defaultCheck1">
                   <p>Tree Nut-Free</p>
                 </label>
               </div>
               <!-- Checkbox 7 -->
               <div class="form-check text-left">
-                <input class="form-check-input move-left" type="checkbox" value="" id="checkbox">
+                <input class="form-check-input move-left" type="checkbox" value="" id="pescatarian">
                 <label class="form-check-label" for="defaultCheck1">
                   <p>Pescatarian</p>
                 </label>
               </div>
 
               <!-- Create search button -->
-                <button class="btn btn-outline-secondary" type="button" id="button-addon1">Search</button>
+                <button class="btn btn-outline-secondary" type="button" id="seacrh">Search</button>
               </div>
             </div>
             
