--- a/about_us.html
+++ b/about_us.html
@@ -44,7 +44,9 @@
 
     <p class="title">The Resident Foodies</p>
    
-  <!--container that holds a card for each of us-->
+  <!--row with single column that holds a card for each of us-->
+   <div class="row"> 
+     <div class="col-md-12">
   
   <!--card for terrapin (photo, brief about info (hobbies, history w cooking), link to favorite recipe -->
     
@@ -137,7 +139,8 @@
           
         </div>
     </div>
-
+  </div>
+</div>
   <!--footer-->
 
   <footer class="footer fixed-bottom">
