search box working with filters

--- a/Results_Page.html
+++ b/Results_Page.html
@@ -114,7 +114,7 @@
               </div>
 
               <!-- Create search button -->
-                <button class="btn btn-outline-secondary" type="button" id="seacrh">Search</button>
+                <button class="btn btn-outline-secondary" type="button" id="search">Search</button>
               </div>
             </div>
             
@@ -169,7 +169,6 @@
               <div class="card-body">
                 <div class="search-results">
                   <h3>Search Results</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium nulla quaerat, velit maxime nostrum quos laudantium pariatur repellendus doloremque. Atque minus repellat nemo explicabo non quas, maxime dolor vero sint?</p>
                 </div>
               </div>
             </div>
