--- a/Results_Page.html
+++ b/Results_Page.html
@@ -130,14 +130,14 @@
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
                     <div class="dropdown-menu" id="inputUnit">
                       <a class="dropdown-item input-unit" href="#" id="cups">Cups</a>
-                      <a class="dropdown-item input-unit" href="#" id="tbs">Tablespoons</a>
+                      <a class="dropdown-item input-unit" href="#" id="tbsp">Tablespoons</a>
                       <a class="dropdown-item input-unit" href="#" id="oz">Ounces</a>
-                      <div role="separator" class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Separated link</a>
                     </div>
                   </div>
                 </div>
                 <br>
+                <!-- End Input downdown -->
+
                 <!-- Output with drowndown -->
                 <div class="input-group">
                   <div type="text" class="form-control" id="output-value" aria-label="Text output with dropdown button"></div>
@@ -145,9 +145,8 @@
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
                     <div class="dropdown-menu">
                       <a class="dropdown-item output-unit" href="#" id="cups">Cups</a>
-                      <a class="dropdown-item output-unit" href="#" id="tbs">Tablespoons</a>
+                      <a class="dropdown-item output-unit" href="#" id="tbsp">Tablespoons</a>
                       <a class="dropdown-item output-unit" href="#" id="oz">Ounces</a>
-                    
                     </div>
                   </div>
                 </div> 
