added more measurement units

--- a/Results_Page.html
+++ b/Results_Page.html
@@ -130,8 +130,14 @@
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
                     <div class="dropdown-menu" id="inputUnit">
                       <a class="dropdown-item input-unit" href="#" id="cups">Cups</a>
-                      <a class="dropdown-item input-unit" href="#" id="tbsp">Tablespoons</a>
                       <a class="dropdown-item input-unit" href="#" id="oz">Ounces</a>
+                      <a class="dropdown-item input-unit" href="#" id="gal">Gallon</a>
+                      <a class="dropdown-item input-unit" href="#" id="mL">Milliliter</a>
+                      <a class="dropdown-item input-unit" href="#" id="L">Liter</a>
+                      <a class="dropdown-item input-unit" href="#" id="pt">Pint</a>
+                      <a class="dropdown-item input-unit" href="#" id="qt">Quart</a>
+                      <a class="dropdown-item input-unit" href="#" id="tbsp">Tablespoons</a>
+                      <a class="dropdown-item input-unit" href="#" id="tsp">Teaspoon</a>
                     </div>
                   </div>
                 </div>
@@ -145,8 +151,14 @@
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
                     <div class="dropdown-menu">
                       <a class="dropdown-item output-unit" href="#" id="cups">Cups</a>
-                      <a class="dropdown-item output-unit" href="#" id="tbsp">Tablespoons</a>
                       <a class="dropdown-item output-unit" href="#" id="oz">Ounces</a>
+                      <a class="dropdown-item output-unit" href="#" id="gal">Gallon</a>
+                      <a class="dropdown-item output-unit" href="#" id="mL">Milliliter</a>
+                      <a class="dropdown-item output-unit" href="#" id="L">Liter</a>
+                      <a class="dropdown-item output-unit" href="#" id="pt">Pint</a>
+                      <a class="dropdown-item output-unit" href="#" id="qt">Quart</a>
+                      <a class="dropdown-item output-unit" href="#" id="tbsp">Tablespoons</a>
+                      <a class="dropdown-item output-unit" href="#" id="tsp">Teaspoon</a>
                     </div>
                   </div>
                 </div> 
@@ -191,6 +203,8 @@
 
     <script src="script_results.js"></script>
     <!-- Tammy's test script - will remove later. -->
+  
+
     <script src="./convertbox_script.js"></script>
 </body>
 </html>
