--- a/Results_Page.html
+++ b/Results_Page.html
@@ -21,7 +21,7 @@
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg">        
     <a class="navbar-brand" href="./index.html"> <i class="fas fa-egg" style="color: white;"></i>  Home Cooked Comfort  <i class="fas fa-cheese" style="color: #fad37c;"></i> </a>     
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
       <!-- Bolds the text of the current page -->
         <a class="nav-item nav-link" href="./index.html">Home</a>
