compelted conversion table

--- a/Results_Page.html
+++ b/Results_Page.html
@@ -30,7 +30,9 @@
   <nav class="navbar navbar-expand-lg">          
 
     <a class="navbar-brand" href="./index.html"> <i class="fas fa-egg" style="color: white;"></i>  Home Cooked Comfort  <i class="fas fa-cheese" style="color: #fad37c;"></i> </a>     
-
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
@@ -131,13 +133,16 @@
                     <div class="dropdown-menu" id="inputUnit">
                       <a class="dropdown-item input-unit" href="#" id="cups">Cups</a>
                       <a class="dropdown-item input-unit" href="#" id="oz">Ounces</a>
-                      <a class="dropdown-item input-unit" href="#" id="gal">Gallon</a>
                       <a class="dropdown-item input-unit" href="#" id="mL">Milliliter</a>
                       <a class="dropdown-item input-unit" href="#" id="L">Liter</a>
                       <a class="dropdown-item input-unit" href="#" id="pt">Pint</a>
                       <a class="dropdown-item input-unit" href="#" id="qt">Quart</a>
                       <a class="dropdown-item input-unit" href="#" id="tbsp">Tablespoons</a>
                       <a class="dropdown-item input-unit" href="#" id="tsp">Teaspoon</a>
+                      <a class="dropdown-item input-unit" href="#" id="g">Gram</a>
+                      <a class="dropdown-item input-unit" href="#" id="kg">Kilogram</a>
+                      <a class="dropdown-item input-unit" href="#" id="mg">Milligram</a>
+                      
                     </div>
                   </div>
                 </div>
@@ -152,13 +157,15 @@
                     <div class="dropdown-menu">
                       <a class="dropdown-item output-unit" href="#" id="cups">Cups</a>
                       <a class="dropdown-item output-unit" href="#" id="oz">Ounces</a>
-                      <a class="dropdown-item output-unit" href="#" id="gal">Gallon</a>
                       <a class="dropdown-item output-unit" href="#" id="mL">Milliliter</a>
                       <a class="dropdown-item output-unit" href="#" id="L">Liter</a>
                       <a class="dropdown-item output-unit" href="#" id="pt">Pint</a>
                       <a class="dropdown-item output-unit" href="#" id="qt">Quart</a>
                       <a class="dropdown-item output-unit" href="#" id="tbsp">Tablespoons</a>
                       <a class="dropdown-item output-unit" href="#" id="tsp">Teaspoon</a>
+                      <a class="dropdown-item output-unit" href="#" id="g">Gram</a>
+                      <a class="dropdown-item output-unit" href="#" id="kg">Kilogram</a>
+                      <a class="dropdown-item output-unit" href="#" id="mg">Milligram</a>
                     </div>
                   </div>
                 </div> 
