results page styling fix

--- a/about_us.html
+++ b/about_us.html
@@ -48,7 +48,7 @@
         <div class="card-body">
           <h3 class="card-title">Terrapin Christensen</h3>          
           <p class="card-text">
-            I'm a jazz drummer and aspiring game developer. My passions include music and gaming, my hobbies include writing, working out, and skiing (when I go home to Chicago for the winter). 
+            I'm a jazz drummer and aspiring game developer. My passions include music and gaming, my hobbies include writing, working out, and snowboarding (when I go home to Chicago for the winter). 
             <br><br>
             I grew up cooking with my dad in Chicago, who is still one of the best chefs I know. While I wasn't hugely into cooking, I learned a lot of basic recipes for surviving on my own that I use to keep my belly full. Over time I've developed more of an appreciation for cooking and I enjoy making protein based meals for my post-workout.
             <br>            
@@ -57,13 +57,13 @@
 
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <i class="fas fa-crown"></i> Drink: 
+            <i class="fas fa-crown"></i> Drink: Water (stay hydrated!)
           </li>
           <li class="list-group-item">
             <i class="fas fa-crown"></i> Food: Orange Chicken 
           </li>
           <li class="list-group-item">
-            <i class="fas fa-crown"></i> Treat: 
+            <i class="fas fa-crown"></i> Treat: Boston Creme Donuts
           </li>
         </ul>
 
