added about me info for Tammy

--- a/about_us.html
+++ b/about_us.html
@@ -83,27 +83,32 @@
         <img src="https://ca.slack-edge.com/T01C8L6GK9Q-U01CJ2RNT5G-0eb7c457a8d0-512" class="card-img-top" alt="tammy">
         <div class="card-body">
           <h3 class="card-title">Tammy Nguyen</h3>          
-          <p class="card-text">cooking history/hobbies</p>
+          <p class="card-text">
+            As a Seattle native, I love hiking, camping and traveling. I also spend my time as a permanent makeup artist or creating ice cream recipes.
+            <br><br>
+            Over the past few years my relationship with food has drastically changed due to developing over 200+ food allergies. Since then, I’ve tirelessly been on the hunt to find or develop foods that are safe for not only myself, but others who suffer from similar dietary restrictions.
+            <br>
+          </p>
         </div>
 
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <i class="fas fa-crown"></i> Drink: 
+            <i class="fas fa-crown"></i> Drink: Milk Tea
           </li>
           <li class="list-group-item">
-            <i class="fas fa-crown"></i> Food: 
+            <i class="fas fa-crown"></i> Food: Cá Kho (Caramelized Catfish)
           </li>
           <li class="list-group-item">
-            <i class="fas fa-crown"></i> Treat: 
+            <i class="fas fa-crown"></i> Treat: Ice Cream
           </li>
         </ul>
 
         <div class="card-body">
-          <a href="mailto:-----"> Email </a>
+          <a href="mailto:tammyn137@gmail.com"> Email </a>
           <br>
           <a href="https://github.com/ttngu" class="card-link">Github</a>
           <br>
-          <a href="">Favorite Recipe</a>
+          <a href="https://www.hungryhuy.com/ca-kho-to-recipe-vietnamese-braised-fish/">Favorite Recipe</a>
         </div>
       </div>
     <!--end card--> 
