weatherbox styling etc.

--- a/index.html
+++ b/index.html
@@ -53,28 +53,26 @@
         <div class="card-body weather-card">
           <h3 style="padding:15px">Local Weather</h3>
       <!-- Enter the Name of City -->
-          <div class="row">
+          <div class="row d-flex justify-content-center">
             <input type="text" class="searchInput" placeholder="Name of City">
             <button type="submit" class="searchBtn">
               <i class="fas fa-search"></i>
             </button>
           </div>
       <!-- Generates City, Date, Time and Temp. -->
-            <div style="text-align:left" class="forecast">
-              <div class="row">
-                <h4 style="padding:15px" class="cityName">City Name</h4>
-                <p class="currentDate"></p>
+            <div style="text" class="forecast">
+              <div class="row d-flex justify-content-center">
+                <h4 style="padding:15px" class="cityName">Is it a soup day? <i class="far fa-snowflake"></i> </h4>
+                <h4 class="currentDate"></h4>
               </div>
-              <div class="row">
-                  <h4 style="padding:15px" class="temp">Temperature:</h4>
+              <div class="row  d-flex justify-content-center">
+                  <h4 style="padding:15px" class="temp">Or time for ice cream?<i class="fas fa-ice-cream"></i>  </h4>
                 <!-- <img class="weatherIcon"></img> -->
               </div>
              </div>
           </div>
         </div>
-
-      </div>
-    </div>
+      </div>  
 
     <!--Column 2-->
 
