Weather now uses lat and lon, Conversions display type of conversion

--- a/Results_Page.html
+++ b/Results_Page.html
@@ -122,7 +122,7 @@
           <div class="input-group number-input">
             <input type="text" class="form-control" id="input-value" aria-label="Text input with dropdown button">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
+              <button class="btn btn-outline-secondary dropdown-toggle" id="input" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
               <div class="dropdown-menu" id="inputUnit">
                 <a class="dropdown-item input-unit" href="#" id="cups">Cups</a>
                 <a class="dropdown-item input-unit" href="#" id="oz">Ounces</a>
@@ -141,12 +141,12 @@
           </div>
           <br>
           <!-- End Input downdown -->
-
+          <p>=</p>
           <!-- Output with drowndown -->
           <div class="input-group">
             <div type="text" class="form-control" id="output-value" aria-label="Text output with dropdown button"></div>
               <div class="input-group-append">
-                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
+                <button class="btn btn-outline-secondary dropdown-toggle" id="output" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
                 <div class="dropdown-menu">
                   <a class="dropdown-item output-unit" href="#" id="cups">Cups</a>
                   <a class="dropdown-item output-unit" href="#" id="oz">Ounces</a>
