--- a/index.html
+++ b/index.html
@@ -54,20 +54,17 @@
           <h3 style="padding:15px">Local Weather</h3>
       <!-- Enter the Name of City -->
           <div class="row d-flex justify-content-center">
-            <input type="text" class="searchInput" placeholder="Name of City">
-            <button type="submit" class="searchBtn">
-              <i class="fas fa-search"></i>
-            </button>
           </div>
       <!-- Generates City, Date, Time and Temp. -->
-            <div style="text" class="forecast">
+            <div type="text" class="forecast">
               <div class="row d-flex justify-content-center">
                 <h4 style="padding:15px" class="cityName">Is it a soup day? <i class="far fa-snowflake"></i> </h4>
-                <h4 class="currentDate"></h4>
               </div>
               <div class="row  d-flex justify-content-center">
+                <h4 class="currentDate"></h4>
+            </div>
+              <div class="row  d-flex justify-content-center">
                   <h4 style="padding:15px" class="temp">Or time for ice cream?<i class="fas fa-ice-cream"></i>  </h4>
-                <!-- <img class="weatherIcon"></img> -->
               </div>
              </div>
           </div>
@@ -152,6 +149,8 @@
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" 
+    integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
   <script src="script.js"></script>
   <script src="weather.js"></script>
 </body>
