--- a/Results_Page.html
+++ b/Results_Page.html
@@ -35,7 +35,7 @@
   <p class="title">Recipes</p>
   
   <!-- Conatiner for main features -->
-  <div class="container" id="main">
+  <div id="main">
     <div class="row">    
       <!-- Column 1 -->
       <div class="col-md-3" id="col1">
@@ -122,7 +122,7 @@
           <div class="input-group number-input">
             <input type="text" class="form-control" id="input-value" aria-label="Text input with dropdown button">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
+              <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="units-input">Units</button>
               <div class="dropdown-menu" id="inputUnit">
                 <a class="dropdown-item input-unit" href="#" id="cups">Cups</a>
                 <a class="dropdown-item input-unit" href="#" id="oz">Ounces</a>
@@ -146,7 +146,7 @@
           <div class="input-group">
             <div type="text" class="form-control" id="output-value" aria-label="Text output with dropdown button"></div>
               <div class="input-group-append">
-                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Units</button>
+                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="units-output">Units</button>
                 <div class="dropdown-menu">
                   <a class="dropdown-item output-unit" href="#" id="cups">Cups</a>
                   <a class="dropdown-item output-unit" href="#" id="oz">Ounces</a>
